k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pneumonia-api-service

spec:
  selector:
    app: pneumonia-api

  type: NodePort

  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
